plugins/groovy/testdata/highlighting/pre30/doWhile.groovy
<error descr="'do while' is not supported in current version">do</error> {
  some stuff
} while (condition)
